@@ -1,3 +1,4 @@
+* Update Shipwire endpoint hostname [cody]
 * Add missing ISO countries [Edward Ocampo-Gooding]
 * Add support for Guernsey to country.rb [cody]
 * Use a Rails 2.3 compatible OrderedHash [cody]
